Clarification (question/answer) forms + src refactoring

--- a/tmpl/Ideas.tmpl
+++ b/tmpl/Ideas.tmpl
@@ -1,5 +1,5 @@
 
-<% c++ #include "ViewContent.h" %>
+<% c++ #include "logic/ViewContent.h" %>
 
 <% skin pci_skin %>
 	<% view ideas_view uses ViewContent::IdeasContent extends template_view %>
