--- a/tmpl/Problems.tmpl
+++ b/tmpl/Problems.tmpl
@@ -1,5 +1,5 @@
 
-<% c++ #include "ViewContent.h" %>
+<% c++ #include "logic/ViewContent.h" %>
 
 <% skin pci_skin %>
 	<% view problems_view uses ViewContent::ProblemsContent extends template_view %>
