--- a/tmpl/User.tmpl
+++ b/tmpl/User.tmpl
@@ -1,5 +1,5 @@
 
-<% c++ #include "ViewContent.h" %>
+<% c++ #include "logic/ViewContent.h" %>
 
 <% skin pci_skin %>
 	<% view user_view uses ViewContent::UserContent extends template_view %>
