--- a/tmpl/NewProblem.tmpl
+++ b/tmpl/NewProblem.tmpl
@@ -1,5 +1,5 @@
 
-<% c++ #include "ViewContent.h" %>
+<% c++ #include "logic/ViewContent.h" %>
 
 <% skin pci_skin %>
 	<% view new_problem_view uses ViewContent::NewProblemContent extends template_view %>
