--- a/tmpl/NewSolution.tmpl
+++ b/tmpl/NewSolution.tmpl
@@ -1,5 +1,5 @@
 
-<% c++ #include "ViewContent.h" %>
+<% c++ #include "logic/ViewContent.h" %>
 
 <% skin pci_skin %>
 	<% view new_solution_view uses ViewContent::NewSolutionContent extends template_view %>
