--- a/tmpl/Problem.tmpl
+++ b/tmpl/Problem.tmpl
@@ -1,5 +1,5 @@
 
-<% c++ #include "ViewContent.h" %>
+<% c++ #include "logic/ViewContent.h" %>
 
 <% skin pci_skin %>
 	<% view problem_view uses ViewContent::ProblemContent extends template_view %>
