--- a/tmpl/Solution.tmpl
+++ b/tmpl/Solution.tmpl
@@ -1,5 +1,5 @@
 
-<% c++ #include "ViewContent.h" %>
+<% c++ #include "logic/ViewContent.h" %>
 
 <% skin pci_skin %>
 	<% view solution_view uses ViewContent::SolutionContent extends template_view %>
