--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -20,11 +20,11 @@
 					var password = event.data.password.val();
 					var user_name = event.data.user_name.val();
 					
-					var onInvalidInput = onInvalidInputSignIn(event.data.password, event.data.user_name);
-					if(validateSignInInput(onInvalidInput, password, user_name)) {
-						var onSuccess = onSuccessSignIn();
-						var onFailure = onFailureSignIn();
-						postSignIn(onSuccess, onFailure, password, user_name);
+					var on_invalid_input = onInvalidInputSignIn(event.data.password, event.data.user_name);
+					if(validateSignInInput(on_invalid_input, password, user_name)) {
+						var on_success = onSuccessSignIn();
+						var on_failure = onFailureSignIn();
+						postSignIn(on_success, on_failure, password, user_name);
 					}
 				});
 			</script>
@@ -34,9 +34,9 @@
 			<a class="btn pull-right" id="sign_out_button">Salir</a>
 			<script>
 				$('#sign_out_button').click(function() {
-					var onSuccess = onSuccessSignOut();
-					var onFailure = onFailureSignOut()
-					postSignOut(onSuccess, onFailure);
+					var on_success = onSuccessSignOut();
+					var on_failure = onFailureSignOut()
+					postSignOut(on_success, on_failure);
 				});
 			</script>
 		<% end template %>
@@ -51,9 +51,9 @@
 			</a>
 			<script>
 				$('#toggle_anonymous_mode_button').click(function() {
-					var onSuccess = onSuccessToggleAnonymousMode($(this));
-					var onFailure = onFailureToggleAnonymousMode()
-					postToggleAnonymousMode(onSuccess, onFailure);
+					var on_success = onSuccessToggleAnonymousMode($(this));
+					var on_failure = onFailureToggleAnonymousMode()
+					postToggleAnonymousMode(on_success, on_failure);
 				});
 			</script>
 		<% end template %>
@@ -105,11 +105,11 @@
 					var password = event.data.password.val();
 					var user_name = event.data.user_name.val();
 					
-					var onInvalidInput = onInvalidInputCreateUser(event.data.email, event.data.first_name, event.data.last_name, event.data.location, event.data.password, event.data.user_name);
-					if (validateCreateUserInput(onInvalidInput, email, first_name, last_name, location, password, user_name)) {
-						var onSuccess = onSuccessCreateUser();
-						var onFailure = onFailureCreateUser();
-						postCreateUser(onSuccess, onFailure, birth_date, email, first_name, genre, last_name, location, password, user_name);
+					var on_invalid_input = onInvalidInputCreateUser(event.data.email, event.data.first_name, event.data.last_name, event.data.location, event.data.password, event.data.user_name);
+					if (validateCreateUserInput(on_invalid_input, email, first_name, last_name, location, password, user_name)) {
+						var on_success = onSuccessCreateUser();
+						var on_failure = onFailureCreateUser();
+						postCreateUser(on_success, on_failure, birth_date, email, first_name, genre, last_name, location, password, user_name);
 					}
 				});
 			</script>
@@ -151,16 +151,42 @@
 					var content = $.trim(event.data.content.val());
 					var description = $.trim(event.data.description.val());
 					
-					var onInvalidInput = onInvalidInputCreateProblem(event.data.content, event.data.description);
-					if (validateCreateProblemInput(onInvalidInput, content, description)) {
-						var onSuccess = onSuccessCreateProblem();
-						var onFailure = onFailureCreateProblem();
-						postCreateProblem(onSuccess, onFailure, content, description);
+					var on_invalid_input = onInvalidInputCreateProblem(event.data.content, event.data.description);
+					if (validateCreateProblemInput(on_invalid_input, content, description)) {
+						var on_success = onSuccessCreateProblem();
+						var on_failure = onFailureCreateProblem();
+						postCreateProblem(on_success, on_failure, content, description);
 					}
 				});
 			</script>
 		<% end template %>
 		
+		<% template vote_problem_form(std::string problem_id, int vote_balance) %>
+			<a class="btn" id="vote_problem_positive_button">Votar positivamente</a>
+			<div id="vote_problem_display"><%= vote_balance %></div>
+			<a class="btn" id="vote_problem_negative_button">Votar negativamente</a>
+			<script>
+				$('#vote_problem_positive_button').click({
+					display: $('#vote_problem_display')
+				}, function(event) {
+					var problem_id = '<%= problem_id %>';
+					
+					var on_success = onSuccessVoteProblem(event.data.display);
+					var on_failure = onFailureVoteProblem();
+					postVoteProblem(on_success, on_failure, true, problem_id);
+				});
+				
+				$('#vote_problem_negative_button').click({
+					display: $('#vote_problem_display')
+				}, function(event) {
+					var problem_id = '<%= problem_id %>';
+					
+					var on_success = onSuccessVoteProblem(event.data.display);
+					var on_failure = onFailureVoteProblem();
+					postVoteProblem(on_success, on_failure, false, problem_id);
+				});
+			</script>
+		<% end %>
 		
 		<% template create_solution_form(std::string problem_id) %>
 			<legend>Crear solución</legend>
@@ -199,15 +225,42 @@
 					var description = $.trim(event.data.description.val());
 					var problem_id =  '<%= problem_id %>';
 					
-					var onInvalidInput = onInvalidInputCreateSolution(event.data.content, event.data.description);
-					if (validateCreateSolutionInput(onInvalidInput, content, description)) {
-						var onSuccess = onSuccessCreateSolution(problem_id);
-						var onFailure = onFailureCreateSolution();
-						postCreateSolution(onSuccess, onFailure, content, description, problem_id);
+					var on_invalid_input = onInvalidInputCreateSolution(event.data.content, event.data.description);
+					if (validateCreateSolutionInput(on_invalid_input, content, description)) {
+						var on_success = onSuccessCreateSolution(problem_id);
+						var on_failure = onFailureCreateSolution();
+						postCreateSolution(on_success, on_failure, content, description, problem_id);
 					}
 				});
 			</script>
 		<% end template %>
+		
+		<% template vote_solution_form(std::string solution_id, int vote_balance) %>
+			<a class="btn" id="vote_solution_positive_button">Votar positivamente</a>
+			<div id="vote_solution_display"><%= vote_balance %></div>
+			<a class="btn" id="vote_solution_negative_button">Votar negativamente</a>
+			<script>
+				$('#vote_solution_positive_button').click({
+					display: $('#vote_solution_display')
+				}, function(event) {
+					var solution_id = '<%= solution_id %>';
+					
+					var on_success = onSuccessVoteSolution(event.data.display);
+					var on_failure = onFailureVoteSolution();
+					postVoteSolution(on_success, on_failure, true, solution_id);
+				});
+				
+				$('#vote_solution_negative_button').click({
+					display: $('#vote_solution_display')
+				}, function(event) {
+					var solution_id = '<%= solution_id %>';
+					
+					var on_success = onSuccessVoteSolution(event.data.display);
+					var on_failure = onFailureVoteSolution();
+					postVoteSolution(on_success, on_failure, false, solution_id);
+				});
+			</script>
+		<% end %>
 		
 		<% template create_clarification_form(std::string associated_publication_id) %>
 			<form id="create_clarification_form">
@@ -223,11 +276,11 @@
 					var associated_publication_id = '<%= associated_publication_id %>';
 					var question = $.trim(event.data.question.val());
 					
-					var onInvalidInput = onInvalidInputCreateClarification(event.data.question);
-					if (validateCreateClarificationInput(onInvalidInput, question)) {
-						var onSuccess = onSuccessCreateClarification();
-						var onFailure = onFailureCreateClarification();
-						postCreateClarification(onSuccess, onFailure, associated_publication_id, question);
+					var on_invalid_input = onInvalidInputCreateClarification(event.data.question);
+					if (validateCreateClarificationInput(on_invalid_input, question)) {
+						var on_success = onSuccessCreateClarification();
+						var on_failure = onFailureCreateClarification();
+						postCreateClarification(on_success, on_failure, associated_publication_id, question);
 					}
 				});
 			</script>
@@ -247,11 +300,11 @@
 					var answer = $.trim(event.data.answer.val());
 					var clarification_id = '<%= clarification_id %>';
 					
-					var onInvalidInput = onInvalidInputAnswerClarification(event.data.answer);
-					if (validateAnswerClarificationInput(onInvalidInput, answer)) {
-						var onSuccess = onSuccessAnswerClarification();
-						var onFailure = onFailureAnswerClarification();
-						postAnswerClarification(onSuccess, onFailure, answer, clarification_id);
+					var on_invalid_input = onInvalidInputAnswerClarification(event.data.answer);
+					if (validateAnswerClarificationInput(on_invalid_input, answer)) {
+						var on_success = onSuccessAnswerClarification();
+						var on_failure = onFailureAnswerClarification();
+						postAnswerClarification(on_success, on_failure, answer, clarification_id);
 					}
 				});
 			</script>
