GUI changes (unfinished! profile broken, horrible, etc) Vote implementation (buggy, undescriptive errors) Database script fixed

--- a/tmpl/Debug.tmpl
+++ b/tmpl/Debug.tmpl
@@ -1,5 +1,5 @@
 
-<% c++ #include "logic/ViewContent.h" %>
+<% c++ #include "../src/logic/ViewContent.h" %>
 
 <% skin pci_skin %>
 	<% view debug_view uses ViewContent::TemplateContent %>
