--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -1,5 +1,5 @@
 
-<% c++ #include "logic/ViewContent.h" %>
+<% c++ #include "../src/logic/ViewContent.h" %>
 
 <% skin pci_skin %>
 	<% view index_view uses ViewContent::IndexContent extends template_view %>
