Fix DB file Set/Unset Acc solution working Votes still not working GUI still horrible, to be repaired

--- a/tmpl/Index.tmpl
+++ b/tmpl/Index.tmpl
@@ -48,7 +48,7 @@
 	
 		<% template page_content() %>
 			<% include template_view::header_bar() %>
-			<div class="container-fluid">
+			<div class="main-container">
 				<a href="<% url "/problems" %>">
 					<img src="img/community.jpg" >
 				</a>
