--- a/tmpl/Template.tmpl
+++ b/tmpl/Template.tmpl
@@ -564,7 +564,7 @@
 					</div>
 					<% if problem->is_solved %>
 						<div class="span1">
-							<div class="tick_on"></div>
+							<div class="tick on"></div>
 						</div>
 					<% end %>
 				</div>				
