--- a/www/css/template.css
+++ b/www/css/template.css
@@ -219,7 +219,8 @@ a.button_square {
 	background-color:#FFFFFF;
 	border-color:#D0D0D0;
 	border-radius:8px;
-	border-style:solid;
+	/*box-shadow: rgba(0, 0, 0, .15) 0 1px 3px;*/
+	border-style: solid;
 	border-width:1px;
 	color:#7A7A7A;
 	font-family:font_button_square;
@@ -422,9 +423,10 @@ a.link_description:hover {
 }
 
 div.problems_problem_description {
-	background-color:#FFFFFF;
+	background: -webkit-gradient(linear,left bottom,left top,
+		color-stop(0, rgba(206, 206, 206, 0.35)),color-stop(1, white));
 	border-color:#D0D0D0;
-	border-radius:8px;
+	border-radius:5px;
 	border-style:solid;
 	border-width:1px;
 	overflow:hidden;
@@ -455,8 +457,8 @@ div.problems_votes .number {
 	border-style:solid;
 	border-width:1px;
 	
-	box-shadow: 2px 0px 8px #333,
-		-2px 0px 8px #333;
+	box-shadow: 2px 0px 8px rgba(51, 51, 51, 0.4), 
+		-2px 0px 8px rgba(51, 51, 51, 0.4);
 
 	border-bottom-style:none;
 }
